fix: [CDS-70763]: support richtext in the step name (#16065)
* fix: [CDS-70763]: support richtext in the step name

* fix: [CDS-70763]: prevent horizontal scroll

* fix: [CDS-70763]: updated snapshot

--- a/src/modules/70-pipeline/components/ExecutionStepDetails/ExecutionStepDetails.module.scss
+++ b/src/modules/70-pipeline/components/ExecutionStepDetails/ExecutionStepDetails.module.scss
@@ -48,6 +48,7 @@
     font-weight: 500;
     font-size: var(--font-size-normal);
     line-height: 18px;
+    word-break: break-word;
   }
 
   .retry {
